--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,21 +48,18 @@ jobs:
           username: ubuntu
           key: ${{ secrets.KEY }}
           script: |
-          
-          ## 여러분이 원하는 경로로 이동합니다.
-            cd /home/ubuntu/
             
-          ## .env 파일을 생성합니다.
+            cd /home/ubuntu/
+
             sudo touch .env
             echo "${{ secrets.ENV_VARS }}" | sudo tee .env > /dev/null
-          
-          ## docker-compose.yaml 파일을 생성합니다.
+            
             sudo touch docker-compose.yaml
             echo "${{ vars.DOCKER_COMPOSE }}" | sudo tee docker-compose.yaml > /dev/null
             
-          ## docker-compose를 실행합니다.
+            ## docker-compose 실행
             sudo chmod 666 /var/run/docker.sock
             sudo docker rm -f $(docker ps -qa)
             sudo docker pull joyoonjoo731/ceos-vote
-            docker-compose -f docker-compose.yaml --env-file ./.env up -d
+            docker-compose -f docker-compose.yml --env-file ./.env up -d
             docker image prune -f
