--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,9 @@ jobs:
 
       ## gradle build
       - name: Build with Gradle
-        run: ./gradlew bootJar
+        run: |
+          chmod +x gradlew
+          ./gradlew bootJar
 
 
       ## 웹 이미지 빌드 및 도커허브에 push
