--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -56,8 +56,8 @@ jobs:
             sudo touch .env
             echo "${{ secrets.ENV_VARS }}" | sudo tee .env > /dev/null
             
-            sudo touch docker-compose.yaml
-            echo "${{ vars.DOCKER_COMPOSE }}" | sudo tee docker-compose.yaml > /dev/null
+            sudo touch docker-compose.yml
+            echo "${{ vars.DOCKER_COMPOSE }}" | sudo tee docker-compose.yml > /dev/null
             
             ## docker-compose 실행
             sudo chmod 666 /var/run/docker.sock
