--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,13 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	/* jwt */
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	/* redis */
+	implementation("org.springframework.boot:spring-boot-starter-data-redis")
 }
 
 tasks.named('test') {
